Mon Mar 23 02:03:28 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (r_symreal): register symbol names as strings first so
	  that r_symlink always returns valid names.
	  [ruby-core:68587] [Bug #10991]

	* marshal.c (r_ivar, r_object0): now need to intern symbol names.

	* marshal.c (r_object0): compare with symbol names.

Mon Mar 23 01:44:35 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (r_symreal): register symbol names as strings first so
	  that r_symlink always returns valid names.
	  [ruby-core:68587] [Bug #10991]

	* marshal.c (r_ivar, r_object0): now need to intern symbol names.

	* marshal.c (r_object0): compare with symbol names.

Sun Mar 22 22:07:40 2015  Kouhei Sutou  <kou@cozmixng.org>

	* doc/etc.rd.ja: Fix wrong coding for Emacs.

Sun Mar 22 09:53:15 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/make-snapshot (package): add default CONFIGURE name to
	  follow r50039.

	* tool/make-snapshot (package): substitute configuration variables
	  in Makefile.in instead of passing by the command line, and make
	  temporary Makefile instead of a pipe.

Sun Mar 22 08:09:47 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (ext/ripper/ripper.c, ext/rbconfig/sizeof/sizes.c):
	  strip autogenerated dependencies which have invalid syntax in
	  other than nmake.

Sat Mar 21 15:01:26 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (console_set_winsize): use handle for
	  writing.  GetConsoleScreenBufferInfo seems failing on a handle
	  for reading.

	* io.c: [DOC] update the example of IO#winsize to use $stdout
	  instead of $stdin, which does not work on Windows.  a patch by
	  Jan Lelis <mail AT janlelis.de> at [ruby-core:68574].
	  [Bug #10986]

Fri Mar 20 18:41:03 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (respond_to_missing_p): check if the receiver responds to
	  the given method by respond_to_missing?.

	* proc.c (mnew_missing): create Method object for method_missing.