@@ -1,3 +1,10 @@
+Mon Mar 23 14:40:45 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (winnt_stat): stat with following symbolic links.
+
+	* win32/win32.c (winnt_lstat): rename old winnt_stat, which does
+	  not follow symbolic links.
+
 Mon Mar 23 02:03:28 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* marshal.c (r_symreal): register symbol names as strings first so
